--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "node-red-contrib-ismove",
-    "description": "A Node-RED Project",
-    "version": "0.0.1",
+    "name": "node-red-dashboard-ismove",
+    "description": "Dashboard for Niesmann Bischoff iSmove",
+    "version": "1.0.0",
     "dependencies": {},
     "node-red": {
         "settings": {
